[package]
name = "net-replay"
version = "0.4.0"
edition = "2021"
authors = ["James"]
description = "Capture and replay TCP/IP traffic"
readme = "README.md"
repository = "https://github.com/jammiess/net-replay"
license = "WTFPL"
keywords = ["network"]
categories = ["network-programming"]
exclude = ["fuzz/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "1.3"
thiserror = "1.0"
pcap = { version = "1.0" }

[profile.release-debug]
inherits = "release"
debug = true
